--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@xunlei/vue-context-menu": "^1.0.2",
     "canvas": "^3.1.0",
     "canvg": "^1.5.3",
     "core-js": "^3.8.3",
@@ -22,8 +23,8 @@
     "panzoom": "^9.4.3",
     "view-design": "^4.7.0",
     "vue": "^2.6.14",
-    "vue-click-outside": "^1.1.0"
-    
+    "vue-click-outside": "^1.1.0",
+    "vue-clipboard2": "^0.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
